syntax = "proto3";
package quicksilver.participationrewards.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "google/api/annotations.proto";
import "tendermint/crypto/proof.proto";
import "quicksilver/participationrewards/v1/participationrewards.proto";
import "quicksilver/claimsmanager/v1/claimsmanager.proto";

option go_package = "github.com/ingenuity-build/quicksilver/x/participationrewards/types";

// Msg defines the participationrewards Msg service.
service Msg {
  rpc SubmitClaim(MsgSubmitClaim) returns (MsgSubmitClaimResponse) {
    option (google.api.http) = {
      post : "/quicksilver/tx/v1/participationrewards/claim"
      body : "*"
    };
  };
}

// MsgSubmitClaim represents a message type for submitting a participation
// claim regarding the given zone (chain).
message MsgSubmitClaim {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string user_address = 1 [ (gogoproto.jsontag) = "user_address", (cosmos_proto.scalar) = "cosmos.AddressString", (gogoproto.moretags) = "yaml:\"user_address\"" ];
  string zone = 2 [ (gogoproto.jsontag) = "zone" ];
  string src_zone = 3 [ (gogoproto.jsontag) = "src_zone", (gogoproto.moretags) = "yaml:\"src_zone\""];
  quicksilver.claimsmanager.v1.ClaimType claim_type = 4 [ (gogoproto.jsontag) = "claim_type", (gogoproto.moretags) = "yaml:\"claim_type\"" ];
  repeated Proof proofs = 5 [ (gogoproto.jsontag) = "proofs" ];
}

// MsgSubmitClaimResponse defines the MsgSubmitClaim response type.
message MsgSubmitClaimResponse {}

// Proof defines a type used to cryptographically prove a claim.
message Proof {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  bytes key = 1 [ (gogoproto.jsontag) = "key" ];
  bytes data = 2 [ (gogoproto.jsontag) = "data" ];
  tendermint.crypto.ProofOps proof_ops = 3
      [ (gogoproto.jsontag) = "proof_ops", (gogoproto.moretags) = "yaml:\"proof_ops\""];
  int64 height = 4 [ (gogoproto.jsontag) = "height" ];
  string proof_type = 5 [ (gogoproto.jsontag) = "proof_type", (gogoproto.moretags) = "yaml:\"proof_type\""];
}
